--- a/HangmanClient/src/app/game/components/game/game.component.html
+++ b/HangmanClient/src/app/game/components/game/game.component.html
@@ -1,12 +1,12 @@
 <div class="container">
   <label>Выберете тему</label> <br />
 
-  <!-- <select [(ngModel)]="this.selId" id="aantal" class="form-control">
-    <option *ngFor="let option of Alltheme" [value]="option.ThemeId"
-      >{{ option.Theme }}
+  <select [(ngModel)]="this.selId" id="aantal" class="form-control">
+    <option *ngFor="let option of Alltheme" [value]="option.ThemeId">
+      {{ option.Theme }}
     </option>
   </select>
-  <p>Selected Quantity : {{ selId }}   {{ wordResult }}</p> -->
+  <p>Selected Quantity : {{ selId }} {{ wordResult }}</p>
 
   <a [routerLink]="[selId]" class="link">Go somewhere</a>
   <button (click)="btnStartGame()" type="button">Начать игру</button>
