--- a/HangmanClient/src/app/game/components/game/game.component.html
+++ b/HangmanClient/src/app/game/components/game/game.component.html
@@ -1,17 +1,19 @@
 <div class="container">
-  <div class="row">
+  <div class="row AddAfterSpace">
     <label id="lblChooseTheme">Выберете тему</label>
   </div>
 
-  <div class="row">
-    <div class="col-md-4">
+  <div class="row AddAfterSpace">
+    <div class="col-md-12">
       <select [(ngModel)]="this.selId" id="selectTheme" class="form-control">
         <option *ngFor="let option of Alltheme" [value]="option.ThemeId">
           {{ option.Theme }}
         </option>
       </select>
     </div>
-    <div class="col-md-4 col-md-offset-4">
+  </div>
+  <div class="row AddAfterSpace">
+    <div class="col-md-12">
       <a id="btnStartGame" [routerLink]="[selId]" class="link">Начать игру</a>
     </div>
   </div>
