--- a/HangmanClient/src/app/core/components/login/login.component.html
+++ b/HangmanClient/src/app/core/components/login/login.component.html
@@ -46,8 +46,15 @@
   <button class="btn btn-lg btn-primary btn-block" type="submit">
     Sign in
   </button>
-  <button class="btn btn-lg btn-secondary btn-block" (click)="this.login()">
+
+
+  <label>
+    <pre> login: boss
+    pass: 1423
+    </pre>
+  </label>
+  <!-- <button class="btn btn-lg btn-secondary btn-block" (click)="this.login()">
     Sign in with Identity Server
-  </button>
+  </button> -->
   <p class="mt-5 mb-3 text-muted text-center">© 2017-2020</p>
 </form>
