--- a/HangmanClient/src/app/core/components/navbar/navbar.component.html
+++ b/HangmanClient/src/app/core/components/navbar/navbar.component.html
@@ -14,42 +14,28 @@
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/home" routerLinkActive="active"
-          >Home</a
-        >
+        <a class="nav-link" href="/home" routerLinkActive="active"
+          >Home</a >
       </li>
+
       <li class="nav-item" *ngIf="this.user$ | async">
-        <a class="nav-link" routerLink="/pizzas" routerLinkActive="active"
-          >Pizzas</a
-        >
+        <a class="nav-link" href="/profile" routerLinkActive="active">
+          Profile</a>
       </li>
-      <li class="nav-item" *ngIf="this.user$ | async">
-        <a class="nav-link" routerLink="/profile" routerLinkActive="active"
-          >Profile</a
-        >
-      </li>
+
       <li class="nav-item" *ngIf="!(this.user$ | async)">
-        <a class="nav-link" routerLink="/login" routerLinkActive="active"
-          >Login</a
-        >
+        <a class="nav-link" href="/login" routerLinkActive="active">
+          Login</a>
       </li>
+
       <li class="nav-item" *ngIf="this.user$ | async">
         <a class="nav-link" (click)="this.logout()">Logout</a>
       </li>
+
       <li class="nav-item" *ngIf="this.user$ | async; let u">
         <a class="nav-link">Welcome {{ u.email }}</a>
       </li>
     </ul>
-    <div class="form-inline mt-2 mt-md-0">
-      <input
-        class="form-control mr-sm-2"
-        type="text"
-        placeholder="Search"
-        aria-label="Search"
-      />
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-        Search
-      </button>
-    </div>
+
   </div>
 </nav>
