--- a/HangmanClient/src/app/game/components/game/game.component.html
+++ b/HangmanClient/src/app/game/components/game/game.component.html
@@ -12,7 +12,7 @@
       </select>
     </div>
   </div>
-  <div class="row AddAfterSpace">
+  <div class="row">
     <div class="col-md-12">
       <a id="btnStartGame" [routerLink]="[selId]" class="link">Начать игру</a>
     </div>
